fix contrast issie

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -79,6 +79,7 @@ nav {
 #menu::before {
     content: "☰";
     display: inline-block;
+    color: var(--nav-font-color);
     transition: transform 0.3s ease;
 }
 
